[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.52.1", features = ["macros", "time"] }
renet = "2.0.0"
renet_netcode = "2.0.0"
glam = "0.30.10"
noise = "0.9.0"
log = "0.4.29"
simple_logger = "5.2.0"
rand = "0.10.1"
bincode = "1.3.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
clap = { version = "4.5.53", features = ["derive"] }
